--- a/projeto/emprestimo/templates/emprestimo_impress.html
+++ b/projeto/emprestimo/templates/emprestimo_impress.html
@@ -238,12 +238,14 @@
 </div>
 <!-- ----------------------- -->
 <script>
-	Number.prototype.toFixedDown = function(digits) {
-    var re = new RegExp("(\\d+\\.\\d{" + digits + "})(\\d)"),
-	m = this.toString().match(re);
-	return m ? parseFloat(m[1]) : this.valueOf();
+	Number.prototype.toFixedDown = function(digits){
+		var re = new RegExp("(\\d+\\.\\d{" + digits + "})(\\d)"),
+		m = this.toString().match(re);
+		return m ? parseFloat(m[1]) : this.valueOf();
 	};
-		//FAÇA OS TESTES NUMA PAGINA COM BASE.HTML CARREGADO
+
+	//COMEÇANDO
+	
 		
 	window.onload = function imprimir(){
 		
