ocultou campo de n_contrato

--- a/projeto/emprestimo/templates/emprestimo_form.html
+++ b/projeto/emprestimo/templates/emprestimo_form.html
@@ -82,7 +82,7 @@
             <!-- ELEMENTOS OCULTOS -->
             <div class="col-sm-3" > 
                 <div class="form-group">            
-                    {% render_field form.n_contrato class="form-control" id="n_contrato"  %}                       
+                    {% render_field form.n_contrato class="form-control" id="n_contrato" type="hidden" %}                       
                 </div>
             </div>
         </div>           
