--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -807,9 +807,9 @@ window.onload = function imprimir(){
         </div>
 
         <div class="paragrafo" >
-            <strong> CLÁUSULA 1ª. </strong> A integralidade do crédito é composta da seguinte forma: Valor 
-            mutuado R$ ${cap_iof = Number(toFixed(cap_iof, 2))}, Taxa de Juros a.m (9.50)%, taxa de juros moratório 0,66% ao dia, multa por 
-            atraso: 2%, valor do IOF total: R$ ${iof_real = Number(toFixed(iof_real, 2))}, Valor total 
+            <strong> CLÁUSULA 1ª. </strong> A integralidade do crédito é composta da seguinte forma: Valor mutuado 
+            R$ ${cap_iof = Number(toFixed(cap_iof, 2))}, Taxa de Juros a.m (9.50)%, taxa de juros moratório 0,66% ao dia, 
+            multa por atraso: 2%, valor do IOF total: R$ ${iof_real = Number(toFixed(iof_real, 2))}, Valor total 
             devido: R$ ${valor_total_devido}.
         </div>
         <div class="paragrafo" >
