--- a/projeto/emprestimo/templates/emprestimo_form.html
+++ b/projeto/emprestimo/templates/emprestimo_form.html
@@ -7,8 +7,13 @@
 <!-- https://docs.djangoproject.com/en/3.0/topics/forms/formsets/ -->
 <!--  -->
 {% block content %}
-    <style>        
-    
+    <style> 
+        .table, td, .table th { 
+            font-size: 12px;        
+            padding: -14.75rem;
+            margin: 0%;
+            font-weight: lighter;
+        }    
     </style>
 
     {% if emprestimo %}
@@ -113,7 +118,7 @@
     </div>
     <div class="row">
         <div class="col-sm-6">
-            <table class="table table-striped ">                
+            <table class="table table-striped">                
                 <tbody>
                     <tr >
                         <th class="text-left">{{form.valor_multa.label}}</th>
