--- a/projeto/emprestimo/templates/emprestimo_form.html
+++ b/projeto/emprestimo/templates/emprestimo_form.html
@@ -122,27 +122,27 @@
                 <tbody>
                     <tr >
                         <th class="text-left">{{form.valor_multa.label}}</th>
-                        <td id="multa_info">R$</td>
+                        <td id="multa_info"></td>
                     </tr>
                     <tr>
                         <th class="text-left">{{form.juros_ao_dia.label}}</th>
-                        <td id="juros_ao_dia_info">R$</td>
+                        <td id="juros_ao_dia_info"></td>
                     </tr>
                     <tr>
                         <th class="text-left">{{form.valor_mutuado.label}}</th>
-                        <td id="valor_mutuado_info">R$</td>
+                        <td id="valor_mutuado_info"></td>
                     </tr>
                     <tr>
-                        <th class="text-left">Preço</th>
-                        <td>R$</td>
+                        <th class="text-left"></th>
+                        <td></td>
                     </tr>
                     <tr>
-                        <th class="text-left">Preço</th>
-                        <td>R$</td>
+                        <th class="text-left"></th>
+                        <td></td>
                     </tr>
                     <tr>
-                        <th class="text-left">Preço</th>
-                        <td>R$</td>
+                        <th class="text-left"></th>
+                        <td></td>
                     </tr>
                     
                     
@@ -153,28 +153,28 @@
             <table class="table table-striped">
                 <tbody>
                     <tr>
-                        <th class="text-left">Preço</th>
-                        <td>R$</td>
+                        <th class="text-left"></th>
+                        <td></td>
                     </tr>
                     <tr>
-                        <th class="text-left">Preço</th>
-                        <td>R$</td>
+                        <th class="text-left"></th>
+                        <td></td>
                     </tr>
                     <tr>
-                        <th class="text-left">Preço</th>
-                        <td>R$</td>
+                        <th class="text-left"></th>
+                        <td></td>
                     </tr>
                     <tr>
-                        <th class="text-left">Preço</th>
-                        <td>R$</td>
+                        <th class="text-left"></th>
+                        <td></td>
                     </tr>
                     <tr>
-                        <th class="text-left">Preço</th>
-                        <td>R$</td>
+                        <th class="text-left"></th>
+                        <td></td>
                     </tr>
                     <tr>
-                        <th class="text-left">Preço</th>
-                        <td>R$</td>
+                        <th class="text-left"></th>
+                        <td></td>
                     </tr>
                 </tbody>
             </table>
